add more api for system users
